Release 1.2 (in development)
============================

* sphinx-build now provides more specific error messages when called with
  invalid options or arguments.

* sphinx-build now supports the standard :option:`--help` and
  :option:`--version` options.

* #869: sphinx-build now has the option :option:`-T` for printing the full
  traceback after an unhandled exception.

* #940: Fix gettext does not extract figure caption.

* #1067: Improve the ordering of the JavaScript search results: matches in titles
  come before matches in full text, and object results are better categorized.
  Also implement a pluggable search scorer.

* Fix text writer can not handle visit_legend for figure directive contents.

* PR#72: #975: Fix gettext does not extract definition terms before docutils 0.10.0

* PR#25: In inheritance diagrams, the first line of the class docstring
  is now the tooltip for the class.

* PR#47: Added :mod:`sphinx.ext.linkcode` extension.

* PR#75: Added ``--follow-links`` option to sphinx-apidoc.

* PR#45: The linkcheck builder now checks ``#anchor``\ s for existence.

* PR#28: Added Hungarian translation.

* PR#35: Added Slovak translation.

* PR#54: Added Norwegian bokmaal translation.

* PR#52: ``special_members`` flag to autodoc now behaves like ``members``.

* #955: Fix i18n transformation.

* Handle duplicate domain indices in texinfo.

* PR#74: Fix some Russian translation.

* PR#97: Fix footnote handling in translated documents.

* Update to jQuery 1.7.1 and Underscore.js 1.3.1.

* #1055: Fix web support with relative path to source directory.

* #1053: The "rightsidebar" and "collapsiblesidebar" HTML theme options now work together.

* #1015: Stop overriding jQuery contains() in the JavaScript.

* #1028: Fix line block output in the text builder.

* #1018: Fix "container" directive handling in the text builder.

* #1012: Update Estonian translation.

* #1010: Make pngmath images transparent by default; IE7+ should handle it.
